--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
     tools:context=".MainActivity">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/cardview"
+        android:id="@+id/reg_cardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
@@ -49,10 +49,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:baselineAligned="true"
                     android:orientation="horizontal"
                     android:weightSum="2">
 
                     <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/tl_fName"
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -60,17 +62,20 @@
                         android:layout_weight="1"
                         android:hint="@string/strFname"
                         app:boxStrokeColor="@color/colorPrimaryText"
+                        app:boxStrokeErrorColor="?attr/colorError"
+                        app:errorTextColor="?attr/colorError"
                         app:startIconDrawable="@drawable/profile_icon"
                         app:startIconTint="@color/colorPrimaryText">
 
                         <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/tv_fname"
+                            android:id="@+id/tv_fName"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:inputType="text" />
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/tl_lName"
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -82,7 +87,7 @@
                         app:startIconTint="@color/colorPrimaryText">
 
                         <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/tv_lname"
+                            android:id="@+id/tv_lName"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:inputType="text" />
@@ -91,6 +96,7 @@
 
                 <com.google.android.material.textfield.TextInputLayout
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:id="@+id/tl_email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
@@ -100,7 +106,7 @@
                     app:startIconTint="@color/colorPrimaryText">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/login_email"
+                        android:id="@+id/tv_email"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="textEmailAddress" />
@@ -108,6 +114,7 @@
 
                 <com.google.android.material.textfield.TextInputLayout
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:id="@+id/tl_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
@@ -119,7 +126,7 @@
                     app:startIconTint="@color/colorPrimaryText">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/login_password"
+                        android:id="@+id/tv_password"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="textPassword" />
@@ -134,7 +141,7 @@
                 android:weightSum="2">
 
                 <com.google.android.material.switchmaterial.SwitchMaterial
-                    android:id="@+id/sw_braanch"
+                    android:id="@+id/sw_branch"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
@@ -153,6 +160,7 @@
                         android:id="@+id/rb_male"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:checked="true"
                         android:text="@string/strMale" />
 
                     <RadioButton
@@ -163,51 +171,58 @@
                         android:text="@string/strFemale" />
                 </RadioGroup>
             </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:orientation="horizontal"
-                android:weightSum="2">
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/city_dropdown"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
-                    android:hint="@string/strCity"
-                    android:layout_weight="1"
-                    app:boxStrokeColor="@color/colorPrimaryText"
-                    app:startIconTint="@color/colorPrimaryText"
-                    app:endIconMode="dropdown_menu"
-                    app:endIconTint="@color/colorPrimaryText">
 
-                    <AutoCompleteTextView
-                        android:id="@+id/dropdown"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:inputType="none"
-                        android:textColor="@color/colorPrimaryText" />
-                </com.google.android.material.textfield.TextInputLayout>
-
-                <CheckBox
-                    android:id="@+id/cb_Pstatus"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
-                    android:layout_weight="1"
-                    android:text="@string/strStatus" />
-            </LinearLayout>
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/btnregister"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:orientation="horizontal"
+                    android:weightSum="2">
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/city_dropdown"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
+                        android:layout_weight="1"
+                        app:boxStrokeColor="@color/colorPrimaryText"
+                        app:endIconMode="dropdown_menu"
+                        app:endIconTint="@color/colorPrimaryText"
+                        app:startIconTint="@color/colorPrimaryText">
+
+                        <AutoCompleteTextView
+                            android:id="@+id/dropdown"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:dropDownHeight="300dp"
+                            android:hint="@string/strCity"
+                            android:inputType="none"
+                            android:textColor="@color/colorPrimaryText" />
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                    <CheckBox
+                        android:id="@+id/cb_pStatus"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
+                        android:layout_weight="1"
+                        android:text="@string/strStatus" />
+                </LinearLayout>
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/btnRegister"
+                    style="@style/Widget.MaterialComponents.Button"
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
                     android:layout_margin="10dp"
-                    android:background="@color/colorPrimary"
                     android:text="@string/strRegister"
                     android:textAllCaps="true"
+                    android:textColor="@color/colorWhite"
                     android:textSize="20sp"
-                    android:textColor="@color/colorWhite" />
+                    app:backgroundTint="@color/colorPrimary"
+                    app:elevation="2dp"
+                    app:rippleColor="?attr/colorOnPrimary" />
             </LinearLayout>
         </ScrollView>
     </androidx.cardview.widget.CardView>
