--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -197,6 +197,7 @@
                             android:layout_height="wrap_content"
                             android:dropDownHeight="300dp"
                             android:hint="@string/strCity"
+                            android:text="Bhavnagar"
                             android:inputType="none"
                             android:textColor="@color/colorPrimaryText" />
                     </com.google.android.material.textfield.TextInputLayout>
